[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Field Assets/ScreenEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Kicker/Kicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Field Assets/Cameras&Signs.png" type="Texture" id=4]
[ext_resource path="res://Debug/Debug.tscn" type="PackedScene" id=5]
[ext_resource path="res://LocalGame/LocalGame.gd" type="Script" id=6]
[ext_resource path="res://LocalGame/UI/LocalUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game/Field Assets/Grass.png" type="Texture" id=8]
[ext_resource path="res://Game/Field Assets/Markings.png" type="Texture" id=9]
[ext_resource path="res://Game/Goal/Goal.tscn" type="PackedScene" id=10]

[node name="LocalGame" type="Node2D"]
script = ExtResource( 6 )

[node name="FieldElements" type="Node2D" parent="."]

[node name="Field" type="Sprite" parent="FieldElements"]
scale = Vector2( 6, 6 )
texture = ExtResource( 8 )

[node name="Markings" type="Sprite" parent="FieldElements"]
scale = Vector2( 6, 6 )
texture = ExtResource( 9 )

[node name="Goal" parent="FieldElements" instance=ExtResource( 10 )]
position = Vector2( 0, -246 )

[node name="Cameras&Signs" type="Sprite" parent="FieldElements"]
position = Vector2( 0, -328 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 152 )

[node name="Kicker" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 160 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="Debug" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ScreenEffects" parent="." instance=ExtResource( 1 )]

[node name="LocalUI" parent="." instance=ExtResource( 7 )]
[connection signal="goal" from="FieldElements/Goal" to="." method="_on_Goal_goal"]
[connection signal="no_goal" from="FieldElements/Goal" to="." method="_on_Goal_no_goal"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
